--- a/main.tex
+++ b/main.tex
@@ -1426,16 +1426,16 @@ Since the map $\algebraicGroup{\GroupExtension{G}}^*(\finiteField) \to \algebrai
 We now prove \Cref{thm:doubling-method-gamma-factor-for-deligne-lusztig} for the extension $\GroupExtension{G}$. Henceforth we denote $H = \GroupExtension{G}$. Our proof will be via induction as described above.
 
 \begin{proof}[Proof of \eqref{item:follows-for-non-cuspidal}]
-	We will show that both sides of \eqref{eq:doubling-method-gamma-factor-is-gauss-sum-of-functorial-lift} have a multiplicativity property. Since every proper parabolic subgroup of $H = \GroupExtension{G}$ is contained in a proper parabolic subgroup group with Levi part of the form $\GL_n\left(\quadraticExtension\right) \times H'$ where $H'$ is as in \Cref{subsec:multiplicativity}, the multiplicativity of the left hand side of \eqref{eq:doubling-method-gamma-factor-is-gauss-sum-of-functorial-lift} follows from \Cref{thm:multiplicativity-in-terms-of-gamma-factors}.
+	We will show that both sides of \eqref{eq:doubling-method-gamma-factor-is-gauss-sum-of-functorial-lift} satisfy a multiplicativity property. Since every proper parabolic subgroup of $H = \GroupExtension{G}$ is contained in a proper maximal parabolic subgroup group with Levi part of the form $L = \GL_k\left(\quadraticExtension\right) \times H'$, where $H'$ is as in \Cref{subsec:multiplicativity}, the multiplicativity of the left hand side of \eqref{eq:doubling-method-gamma-factor-is-gauss-sum-of-functorial-lift} follows from \Cref{thm:multiplicativity-in-terms-of-gamma-factors}.
 	
-	For the right hand side, first \Cref{prop:lusztig-series-are-unions-of-harish-chandra-series} tells us that if $\pi \in \LusztigSeries{
+	For the right hand side of \eqref{eq:doubling-method-gamma-factor-is-gauss-sum-of-functorial-lift}, first \Cref{prop:lusztig-series-are-unions-of-harish-chandra-series} tells us that if $\pi \in \LusztigSeries{
 		\GroupExtension{\algebraicGroup{G}}^{\Frobenius}}{(s)}$ is a subrepresentation of the parabolically induced representation $\Ind{H}{G}{\sigma}$ where $\sigma$ is an irreducible representation of the Levi part $L$ of $P$, then $\sigma \in \LusztigSeries{
 		\algebraicGroup{L}^{\Frobenius}}{(s)}$.
 		
-	Thus if $\pi$ is a subrepresentation of a parabolically induced representation as above, then $(T_H,\theta_H)$ is geometrically conjugate to $(T_1 \times T_2,\theta_1 \times \theta_2)$ for $T_1 \times T_2$ a torus of $L$. As proved in \Cref{lem:indep_geo_conj}, $$g_{T \cap G}(\chi,\theta|_{T \cap G},\psi) = g_{(T_1 \times T_2) \cap G}(\chi,\left(\theta_1\times \theta_2\right)|_{(T_1 \times T_2) \cap G},\psi).$$ The right hand of the above is multiplicative since Gauss sums are multiplicative by \eqref{eq:Gauss_multiplicitive}.
+	Thus if $\pi$ is a subrepresentation of a parabolically induced representation as above, then $(T_H,\theta_H)$ is geometrically conjugate to $(T_{\GL_k\left(\quadraticExtension\right)} \times T_{H'}, \theta_{\GL_k\left(\quadraticExtension\right)} \times \theta_{H'})$ for $T_{\GL_k\left(\quadraticExtension\right)} \times H'$ a torus of $L = \GL_k\left(\quadraticExtension\right) \times H'$. As proved in \Cref{lem:indep_geo_conj}, $$g_{T \cap G}\left(\chi,\theta\restriction_{T \cap G},\psi\right) = g_{\left(T_{\GL_k\left(\quadraticExtension\right)} \times T_{H}'\right) \cap G}\left(\chi,\left(\theta_{\GL_k\left(\quadraticExtension\right)}\times \theta_{H'}\right)\restriction_{\left(T_{\GL_k\left(\quadraticExtension\right)} \times T_{H'}\right) \cap G},\psi\right).$$ The right hand of the last equality is multiplicative since Gauss sums are multiplicative by \eqref{eq:Gauss_multiplicitive}.
 \end{proof}
 \begin{proof}[Proof of \eqref{item:follows-for-cuspidal}]
-By \Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters} and \Cref{lem:indep_geo_conj}, we have that if $\RTThetaVirtual{T_H}{H}{\theta_H} = \sum_{\pi} c_{\pi} \pi$, where $\pi$ goes over all the irreducible representations of $H$ and $c_{\pi} \in \zIntegers$, then
+By \Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters} and \Cref{lem:indep_geo_conj}, we have that if $\RTThetaVirtual{T_H}{H}{\theta_H} = \sum_{\pi} c_{\pi} \pi$, where $\pi$ goes over all (equivalence classes of) irreducible representations of $H$ and $c_{\pi} \in \zIntegers$, then
 $$\sum_{\pi} c_{\pi} \dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = \GaussSumTorusCharacter{T'}{\theta'}{\chi}{\fieldCharacter} \RTGTheta{T_H}{H}{\theta_H}\left(1\right) = \GaussSumTorusCharacter{T'}{\theta'}{\chi}{\fieldCharacter} \left(\sum_{\pi} c_{\pi}\right).$$
 Subtracting the equality for non-cuspidal $\pi$ established by (\ref{item:follows-for-non-cuspidal}), we are left with the equality
 $$ \sum_{\pi \textnormal{ cuspidal}} c_{\pi} \dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = \left(\sum_{\pi \textnormal{ cuspidal}} c_{\pi}\right)\GaussSumTorusCharacter{T'}{\theta'}{\chi}{\fieldCharacter}.$$
